# goit-pythonweb-hw-03

./: docker-compose.yml
FullStack-Web-Development-hw3/: Dockerfile  error.html  main.py  pyproject.toml
FullStack-Web-Development-hw3/loader/: read.html
FullStack-Web-Development-hw3/storage/: data.json
